--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -271,6 +271,12 @@
     <ClInclude Include="HYLight2D.h">
       <Filter>08. Component\06. Light2D</Filter>
     </ClInclude>
+    <ClInclude Include="HYBackgroundScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="HYSpotLightScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -396,6 +402,12 @@
     <ClCompile Include="HYLight2D.cpp">
       <Filter>08. Component\06. Light2D</Filter>
     </ClCompile>
+    <ClCompile Include="HYBackgroundScript.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="HYSpotLightScript.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="SimpleMath.inl">
@@ -413,6 +425,9 @@
       <Filter>ShaderCode</Filter>
     </FxCompile>
     <FxCompile Include="struct.fx">
+      <Filter>ShaderCode</Filter>
+    </FxCompile>
+    <FxCompile Include="func.fx">
       <Filter>ShaderCode</Filter>
     </FxCompile>
   </ItemGroup>
