--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -18,26 +18,29 @@
     <Filter Include="UI">
       <UniqueIdentifier>{1e0e102a-b2d6-456e-a7bb-357f0a9402c8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Content">
-      <UniqueIdentifier>{3796fb55-06bb-4440-a01f-ff07bcbf9237}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\Inspector">
-      <UniqueIdentifier>{a22ae863-10f2-495b-993c-36a9dd4dbf5a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\Outliner">
+    <Filter Include="UI\1. Outliner">
       <UniqueIdentifier>{ca9a2704-c34f-4a5c-8e93-f8bc649fa257}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\AssetUI">
+    <Filter Include="UI\2. Content">
+      <UniqueIdentifier>{3796fb55-06bb-4440-a01f-ff07bcbf9237}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\3. Inspector">
+      <UniqueIdentifier>{a22ae863-10f2-495b-993c-36a9dd4dbf5a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\3. Inspector\AssetUI">
       <UniqueIdentifier>{7f84369d-304c-4d33-be1d-7874b1688baa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\CompoenntUI">
+    <Filter Include="UI\3. Inspector\CompoenntUI">
       <UniqueIdentifier>{3cb11ecc-096f-4ec5-80e8-1c85a6f69435}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\CompoenntUI\MeshRender">
+    <Filter Include="UI\3. Inspector\CompoenntUI\MeshRender">
       <UniqueIdentifier>{2f3507fa-9d3e-4e1e-9bda-4b916e7ce1f3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\CompoenntUI\Transform">
+    <Filter Include="UI\3. Inspector\CompoenntUI\Transform">
       <UniqueIdentifier>{3626ec46-7c48-4db7-ab6c-a854c2a08359}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\4. ListUI">
+      <UniqueIdentifier>{41ffccb0-57b8-4886-bfb4-ba472c7da766}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -87,22 +90,25 @@
       <Filter>ImGuiMgr</Filter>
     </ClInclude>
     <ClInclude Include="Inspector.h">
-      <Filter>UI\Inspector</Filter>
+      <Filter>UI\3. Inspector</Filter>
     </ClInclude>
     <ClInclude Include="Content.h">
-      <Filter>UI\Content</Filter>
+      <Filter>UI\2. Content</Filter>
     </ClInclude>
     <ClInclude Include="Outliner.h">
-      <Filter>UI\Outliner</Filter>
+      <Filter>UI\1. Outliner</Filter>
     </ClInclude>
     <ClInclude Include="TransformUI.h">
-      <Filter>UI\Inspector\CompoenntUI\Transform</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI\Transform</Filter>
     </ClInclude>
     <ClInclude Include="MeshRenderUI.h">
-      <Filter>UI\Inspector\CompoenntUI\MeshRender</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI\MeshRender</Filter>
     </ClInclude>
     <ClInclude Include="ComponentUI.h">
-      <Filter>UI\Inspector\CompoenntUI</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI</Filter>
+    </ClInclude>
+    <ClInclude Include="ListUI.h">
+      <Filter>UI\4. ListUI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -138,22 +144,25 @@
       <Filter>ImGuiMgr</Filter>
     </ClCompile>
     <ClCompile Include="Inspector.cpp">
-      <Filter>UI\Inspector</Filter>
+      <Filter>UI\3. Inspector</Filter>
     </ClCompile>
     <ClCompile Include="Content.cpp">
-      <Filter>UI\Content</Filter>
+      <Filter>UI\2. Content</Filter>
     </ClCompile>
     <ClCompile Include="Outliner.cpp">
-      <Filter>UI\Outliner</Filter>
+      <Filter>UI\1. Outliner</Filter>
     </ClCompile>
     <ClCompile Include="TransformUI.cpp">
-      <Filter>UI\Inspector\CompoenntUI\Transform</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI\Transform</Filter>
     </ClCompile>
     <ClCompile Include="MeshRenderUI.cpp">
-      <Filter>UI\Inspector\CompoenntUI\MeshRender</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI\MeshRender</Filter>
     </ClCompile>
     <ClCompile Include="ComponentUI.cpp">
-      <Filter>UI\Inspector\CompoenntUI</Filter>
+      <Filter>UI\3. Inspector\CompoenntUI</Filter>
+    </ClCompile>
+    <ClCompile Include="ListUI.cpp">
+      <Filter>UI\4. ListUI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
