--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -51,6 +51,9 @@
     <Filter Include="UI\3. Inspector\CompoenntUI\Light2D">
       <UniqueIdentifier>{a48af97e-5914-4cf6-b9a1-2b4949989d81}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI\3. Inspector\CompoenntUI\Camera">
+      <UniqueIdentifier>{a4512bfa-9582-431c-82ea-a2c8af981e47}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -128,6 +131,9 @@
     <ClInclude Include="Animator2DUI.h">
       <Filter>UI\3. Inspector\CompoenntUI\Animator2D</Filter>
     </ClInclude>
+    <ClInclude Include="CameraUI.h">
+      <Filter>UI\3. Inspector\CompoenntUI\Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui.cpp">
@@ -190,6 +196,9 @@
     </ClCompile>
     <ClCompile Include="Animator2DUI.cpp">
       <Filter>UI\3. Inspector\CompoenntUI\Animator2D</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraUI.cpp">
+      <Filter>UI\3. Inspector\CompoenntUI\Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
