--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -197,6 +197,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYMesh.h" />
     <ClInclude Include="HYMeshRender.h" />
     <ClInclude Include="HYMissileScript.h" />
+    <ClInclude Include="HYParticleSystem.h" />
     <ClInclude Include="HYPathMgr.h" />
     <ClInclude Include="HYPlayerScript.h" />
     <ClInclude Include="HYRenderComponent.h" />
@@ -250,6 +251,7 @@ call EngineCopy.bat</Command>
     <ClCompile Include="HYMesh.cpp" />
     <ClCompile Include="HYMeshRender.cpp" />
     <ClCompile Include="HYMissileScript.cpp" />
+    <ClCompile Include="HYParticleSystem.cpp" />
     <ClCompile Include="HYPathMgr.cpp" />
     <ClCompile Include="HYPlayerScript.cpp" />
     <ClCompile Include="HYRenderComponent.cpp" />
