--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TilemapEditor.h" />
     <ClInclude Include="TilemapUI.h" />
     <ClInclude Include="TransformUI.h" />
     <ClInclude Include="UI.h" />
@@ -204,6 +205,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TilemapEditor.cpp" />
     <ClCompile Include="TilemapUI.cpp" />
     <ClCompile Include="TransformUI.cpp" />
     <ClCompile Include="UI.cpp" />
