--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -199,6 +199,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYMeshRender.h" />
     <ClInclude Include="HYMissileScript.h" />
     <ClInclude Include="HYParticleSystem.h" />
+    <ClInclude Include="HYParticleUpdate.h" />
     <ClInclude Include="HYPathMgr.h" />
     <ClInclude Include="HYPlayerScript.h" />
     <ClInclude Include="HYRenderComponent.h" />
@@ -255,6 +256,7 @@ call EngineCopy.bat</Command>
     <ClCompile Include="HYMeshRender.cpp" />
     <ClCompile Include="HYMissileScript.cpp" />
     <ClCompile Include="HYParticleSystem.cpp" />
+    <ClCompile Include="HYParticleUpdate.cpp" />
     <ClCompile Include="HYPathMgr.cpp" />
     <ClCompile Include="HYPlayerScript.cpp" />
     <ClCompile Include="HYRenderComponent.cpp" />
@@ -300,6 +302,12 @@ call EngineCopy.bat</Command>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="particle.fx">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="particle_update.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Effect</ShaderType>
