--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -152,12 +152,15 @@
   <ItemGroup>
     <ClInclude Include="AnimationEditor.h" />
     <ClInclude Include="Animator2DUI.h" />
+    <ClInclude Include="AssetUI.h" />
     <ClInclude Include="CameraUI.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="Collider2DUI.h" />
     <ClInclude Include="ComponentUI.h" />
+    <ClInclude Include="ComputeShaderUI.h" />
     <ClInclude Include="Content.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GraphicsShaderUI.h" />
     <ClInclude Include="HYImGuiMgr.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
@@ -170,12 +173,17 @@
     <ClInclude Include="Inspector.h" />
     <ClInclude Include="Light2DUI.h" />
     <ClInclude Include="ListUI.h" />
+    <ClInclude Include="MaterialUI.h" />
+    <ClInclude Include="MeshDataUI.h" />
     <ClInclude Include="MeshRenderUI.h" />
+    <ClInclude Include="MeshUI.h" />
     <ClInclude Include="Outliner.h" />
     <ClInclude Include="ParticleSystemUI.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SoundUI.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TextureUI.h" />
     <ClInclude Include="TilemapEditor.h" />
     <ClInclude Include="TilemapUI.h" />
     <ClInclude Include="TransformUI.h" />
@@ -185,10 +193,13 @@
   <ItemGroup>
     <ClCompile Include="AnimationEditor.cpp" />
     <ClCompile Include="Animator2DUI.cpp" />
+    <ClCompile Include="AssetUI.cpp" />
     <ClCompile Include="CameraUI.cpp" />
     <ClCompile Include="Collider2DUI.cpp" />
     <ClCompile Include="ComponentUI.cpp" />
+    <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
+    <ClCompile Include="GraphicsShaderUI.cpp" />
     <ClCompile Include="HYImGuiMgr.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
@@ -198,16 +209,22 @@
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
     <ClCompile Include="Inspector.cpp" />
+    <ClCompile Include="Inspector_init.cpp" />
     <ClCompile Include="Light2DUI.cpp" />
     <ClCompile Include="ListUI.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MaterialUI.cpp" />
+    <ClCompile Include="MeshDataUI.cpp" />
     <ClCompile Include="MeshRenderUI.cpp" />
+    <ClCompile Include="MeshUI.cpp" />
     <ClCompile Include="Outliner.cpp" />
     <ClCompile Include="ParticleSystemUI.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SoundUI.cpp" />
+    <ClCompile Include="TextureUI.cpp" />
     <ClCompile Include="TilemapEditor.cpp" />
     <ClCompile Include="TilemapUI.cpp" />
     <ClCompile Include="TransformUI.cpp" />
